k8s/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: hilaldedek/flaskblogapp-database:latest
          ports:
            - containerPort: 27017
          imagePullPolicy: Always
