k8s/service-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
