k8s/service-database.yaml
kind: Service
apiVersion: v1
metadata:
  name: database-service
spec:
  type: NodePort
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
